--- a/index.css
+++ b/index.css
@@ -99,6 +99,12 @@ justify-content: center;
     justify-content: center;
 }
 
+#video{
+    display: flex;
+    justify-self: center
+    
+}
+
 #hgimg:hover{
     height:400px;
     zoom: normal;
