--- a/index.css
+++ b/index.css
@@ -9,7 +9,12 @@ body{
     background-color: aliceblue;
 }
 
-
+#about{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    align-content: center;
+}
 
 #header1{
     background-color: black;
